# flashgrep

./: .flashgrepignore  .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  code.md  comments.txt  inject.md
.github/workflows/: release.yml  security.yml  test.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: bootstrap-policy-troubleshooting.md  cross-platform-manual-validation.md  cross-platform-validation-record.md  flashgrep-vs-grep-glob.md  grep-glob-production-parity-matrix.md  initial-indexing.md  release-readiness-checklist.md  troubleshooting-initial-indexing.md
docs/.opencode/: opencode.json
openblob/: go.mod
openblob/text2vec/: README.md
openspec/: config.yaml
skills/: SKILL.md
specs/001-enforce-native-policy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-improve-edit-precision/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-expand-ai-capabilities/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: lib.rs  main.rs  path_utils.rs
src/chunking/: mod.rs
src/cli/: fs.rs  mod.rs
src/config/: mod.rs  paths.rs
src/db/: mod.rs  models.rs
src/index/: engine.rs  initial_scanner.rs  mod.rs  scanner.rs  state.rs
src/mcp/: bootstrap.rs  code_io.rs  fs_tools.rs  glob_tool.rs  mod.rs  safety.rs  server.rs  skill.rs  stdio.rs  tools.rs
src/neural/: mod.rs
src/search/: mod.rs
tests/: integration_tests.rs  mcp_integration_tests.rs
(+237 files in other folders)
